// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentCourseDetailsPageComponent should snap with default fields 1`] = `
<tm-student-course-details-page
  Gender={[Function Object]}
  SortBy={[Function Object]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  instructorDetails={[Function Array]}
  instructorService={[Function InstructorService]}
  route={[Function ActivatedRoute]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  teammateProfiles={[Function Array]}
  teammateProfilesSortBy="0"
>
  <h1
    class="page-title"
  >
     
  </h1><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Course
      </h4>
    </div>
    <div
      class="card border-primary"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form form-horizontal"
        >
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Name
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="course-name"
              >
                
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                ID
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="course-id"
              >
                
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Timezone
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="time-zone"
              >
                UTC
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Created at
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="created-date"
              >
                Thu, 01 Jan 1970, 00:00 AM UTC
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Self
      </h4>
    </div>
    <div
      class="card border-primary"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form form-horizontal"
        >
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Name
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-name"
              >
                
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Section
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-section"
              >
                
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Team
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-team"
              >
                
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Email
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-email"
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="card bg-light mb-4"
  >
    <div
      class="card-body"
    >
      <h5
        class="d-inline"
      >
        <strong>
           Sort By: 
        </strong>
      </h5>
      <div
        class="btn-group"
        data-toggle="buttons"
      >
        <button
          class="btn btn-light"
          id="sort-name"
        >
          Name
        </button>
        <button
          class="btn btn-light"
        >
          Email
        </button>
        <button
          class="btn btn-light"
        >
          Gender
        </button>
        <button
          class="btn btn-light"
        >
          Institution
        </button>
        <button
          class="btn btn-light"
        >
          Nationality
        </button>
      </div>
    </div>
  </div>
</tm-student-course-details-page>
`;

exports[`StudentCourseDetailsPageComponent should snap with populated fields 1`] = `
<tm-student-course-details-page
  Gender={[Function Object]}
  SortBy={[Function Object]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  instructorDetails={[Function Array]}
  instructorService={[Function InstructorService]}
  route={[Function ActivatedRoute]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  teammateProfiles={[Function Array]}
  teammateProfilesSortBy="0"
>
  <h1
    class="page-title"
  >
     Sample Course 101
  </h1><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Course
      </h4>
    </div>
    <div
      class="card border-primary"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form form-horizontal"
        >
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Name
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="course-name"
              >
                Sample Course 101
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                ID
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="course-id"
              >
                1.1.c-demo2
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Timezone
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="time-zone"
              >
                UTC
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Created at
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="created-date"
              >
                Wed, 13 Mar 2019, 10:15 AM UTC
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Instructors
      </h4>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <div
          class="row"
        >
          <div
            class="col-12"
          >
            <table
              class="table table-striped"
              id="instructor-table"
            >
              <thead>
                <tr>
                  <th
                    class="font-weight-bold"
                  >
                    Name
                  </th>
                  <th
                    class="font-weight-bold"
                  >
                    Email
                  </th>
                </tr>
              </thead>
              <tbody>
                
                <tr>
                  <td>
                    1
                  </td>
                  <td>
                    <a
                      href="mailto:1@1.com"
                    >
                      1@1.com
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Self
      </h4>
    </div>
    <div
      class="card border-primary"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form form-horizontal"
        >
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Name
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-name"
              >
                1
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Section
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-section"
              >
                Tutorial Group 2
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Team
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-team"
              >
                Team 2
              </span>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-4 text-right"
            >
              <label>
                Email
              </label>
            </div>
            <div
              class="col-8"
            >
              <span
                id="student-email"
              >
                1@1.com
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="card bg-light mb-4"
  >
    <div
      class="card-body"
    >
      <h5
        class="d-inline"
      >
        <strong>
           Sort By: 
        </strong>
      </h5>
      <div
        class="btn-group"
        data-toggle="buttons"
      >
        <button
          class="btn btn-light"
          id="sort-name"
        >
          Name
        </button>
        <button
          class="btn btn-light"
        >
          Email
        </button>
        <button
          class="btn btn-light"
        >
          Gender
        </button>
        <button
          class="btn btn-light"
        >
          Institution
        </button>
        <button
          class="btn btn-light"
        >
          Nationality
        </button>
      </div>
    </div>
  </div><div
    class="section"
  >
    <div
      class="col-sm-12"
    >
      <h4
        class="font-weight-bold"
      >
        Team Profiles
      </h4>
    </div>
    
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <div
          class="row"
        >
          <div
            class="col-md-2 col-3"
          >
            <img
              class="profile-pic float-left"
              src="/assets/images/profile_picture_default.png"
            />
          </div>
          <div
            class="col-md-10 col-9"
          >
            <table
              class="table table-striped"
              id="teammates-table-0"
            >
              <tbody>
                <tr>
                  <td
                    class="font-weight-bold"
                  >
                    Name
                  </td>
                  <td>
                    <span>
                       I am 2 
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    class="font-weight-bold"
                  >
                    Email
                  </td>
                  <td>
                    <a
                      href="mailto:iam2@hello.com"
                    >
                      iam2@hello.com
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="font-weight-bold"
                  >
                    Gender
                  </td>
                  <td>
                    <span>
                      MALE
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    class="font-weight-bold"
                  >
                    Institution
                  </td>
                  <td>
                    <span>
                      nus
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    class="font-weight-bold"
                  >
                    Nationality
                  </td>
                  <td>
                    <span>
                      Andorran
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-student-course-details-page>
`;
